--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -27,7 +27,7 @@ body {
 }
 
 select {
-  background-image: url("/src/assets/teenyicons_right-solid.png");
+  background-image: url('/assets/teenyicons_right-solid.png');
   background-position: right 15px center;
   background-repeat: no-repeat;
   background-size: auto 40%;
